chore: snapshot current project state on main

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pal-core",
+  "name": "palpal-core",
   "version": "0.1.0",
-  "description": "Agents SDK compatible TypeScript wrapper with SafetyAgent, Skills, MCP and Chat Completions providers.",
+  "description": "High-safety, OpenAI Agents SDK-compatible TypeScript library with SafetyAgent, Skills, MCP, and Chat Completions providers.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "exports": {
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "npm run build && node dist/test/providers.test.js && node dist/test/mcp.test.js && node dist/test/errors.test.js && node dist/test/runner.test.js && node dist/test/skills.test.js",
+    "prepack": "npm run build",
     "pack:check": "npm pack --dry-run"
   },
   "keywords": [
@@ -32,3 +33,4 @@
     "typescript": "^5.9.3"
   }
 }
+
